--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-"<html><b>Sara</b> is silly.</html>" 
+---
+layout: layout
+title: Jekyll Base
+---
+
+<div class="content">
+  <div class="related">
+    <ul>
+      {% for post in site.posts %}
+      <li>
+	<span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
+</div>
